index,service,blog修正

--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,13 @@
         </div>
       </header>
 
-      <div id="section">
+      <div class="section">
         <h1 class="section-title">社員ブログ</h1>
       </div>
     </div>
 
     <main>
-      <div id="blog">
+      <div class="blog">
         <div class="blog-container">
           <div class="blog-post">
             <p class="blog-img"><a href="blog.html">
